fix: overflow img

--- a/sass/layout/_menu_highlights.scss
+++ b/sass/layout/_menu_highlights.scss
@@ -36,6 +36,11 @@
     }
   }
 
+  &__image {
+    display: block;
+    max-width: 100%;
+  }
+
   &__text-wrapper {
     display: flex;
     flex-direction: column;
